Fix RTL CSS in the entry detail page for Divi and other themes that set table cells to `text-align:left`

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -16,7 +16,9 @@ table.entry-detail-view td{
 .rtl table.entry-detail-view th,
 .rtl table.entry-detail-view td{
     border-left:0;
+    text-align: right;
 }
+
 .gravityflow-no-sidebar .gravityflow-action-buttons{
     text-align:left;
 }
